# mac-captions

./: .copier-answers.yml  .gitignore  .pre-commit-config.yml  Package.swift  README.md  pyproject.toml  run-captions.sh  run.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
Sources/CaptionOverlay/: main.swift
src/mac_captions/: backends.py  live.py  pipeline.py
tests/: test_backends.py  test_pipeline.py
