[project]
name = "mac-captions"
version = "0.1.0"
description = "Live English speech → Spanish captions on macOS using Granite Speech 4.1 (MLX on Apple Silicon, transformers/PyTorch on Intel)"
readme = "README.md"
requires-python = ">=3.12"

[project.scripts]
mac-captions = "mac_captions.live:run"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
pythonpath = ["src"]
minversion = "6.0"
addopts = "--cov=src --cov-report=term-missing"
testpaths = [
    "tests",
]

[tool.coverage.run]
omit = [
    "src/mac_captions/live.py",  # requires mic + GPU; not CI-testable
    # backends.py is included in coverage — MlxBackend/TransformersBackend use
    # '# pragma: no cover' individually; detect_backend() is tested via test_backends.py
]

[tool.coverage.report]
fail_under = 80

# ---------------------------------------------------------------------------
# Pixi — package manager / environment.
#
# conda-forge provides PyTorch for Intel macOS (osx-64), which PyPI no longer
# does (PyPI caps Intel-Mac torch at 2.2.2).  conda-forge ships py312 PyTorch
# builds for BOTH osx-64 and osx-arm64, so one Python version works everywhere.
#
# Setup:   pixi install
# Run:     pixi run captions   (or ./run-captions.sh)
# Test:    pixi run test
# ---------------------------------------------------------------------------
[tool.pixi.workspace]
channels = ["conda-forge"]
# mlx wheels (Apple Silicon) require macOS >= 14; default Pixi assumes 13.0.
platforms = [
    "osx-64",
    { platform = "osx-arm64", macos = "14.0" },
]

# Native deps from conda-forge — available on both platforms.
# pytorch/torchaudio are left unpinned: Pixi solves each platform independently
# (sharing only python 3.12), so the solver picks a compatible py312 pair for each.
# torchaudio is required by transformers' GraniteSpeechFeatureExtractor.
[tool.pixi.dependencies]
python = "3.12.*"
pytorch = "*"
torchaudio = "*"
transformers = ">=4.52"
huggingface_hub = "*"
numpy = "*"
pytest = "*"
pytest-cov = "*"
ruff = "*"

# Prebuilt wheels simplest sourced from PyPI (cross-platform).
[tool.pixi.pypi-dependencies]
sounddevice = "*"
webrtcvad-wheels = "*"

# MLX backend — Apple Silicon only (GPU-accelerated default on arm64).
[tool.pixi.target.osx-arm64.pypi-dependencies]
mlx-audio = ">=0.4.1"

[tool.pixi.tasks]
captions = { cmd = "python -m mac_captions.live", env = { PYTHONPATH = "src" } }
test = { cmd = "pytest", env = { PYTHONPATH = "src" } }
